# scratch-notebook-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.review.finish.md  speckit.review.implement.md  speckit.review.init.md  speckit.review.md.bak  speckit.review.record.md  speckit.specify.md  speckit.tasks.md
.specify/memory/: constitution.md
.specify/templates/: review-report-template.md  review-report-to-pdf.sh  review-report.css  tasks-template.md
scratch_notebook/: __init__.py  auth.py  config.py  errors.py  eviction.py  logging.py  metrics.py  models.py  namespaces.py  search.py  server.py  storage.py  storage_lancedb.py  validation.py
scratch_notebook/transports/: __init__.py  http.py  stdio.py
specs/001-scratch-notebook-mcp/: data-model.md  human-scratchpad.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py
tests/contract/: __init__.py  test_api_path_leakage.py  test_default_tenant_migration.py  test_placeholder.py  test_tool_schemas.py
tests/integration/: __init__.py  test_cell_listing.py  test_eviction_notifications.py  test_http_sse_and_metrics.py  test_mcp_namespaces_and_tags.py  test_mcp_scratch_lifecycle.py  test_mcp_scratch_validate.py  test_mcp_semantic_search.py  test_mcp_tag_listing.py  test_metrics_cli_failures.py  test_metrics_matrix.py  test_placeholder.py  (+1 more)
(+51 files in other folders)
