[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "scratch-notebook"
version = "0.1.0"
description = "Scratch Notebook MCP server"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Rafael" }
]
dependencies = [
    "fastmcp==2.13.1",
    "jsonschema==4.25.1",
    "referencing>=0.35.1",
    "PyYAML>=6.0",
    "syntax-checker==0.4.0b3",
    "markdown-analysis==0.1.5",
    "lancedb>=0.6,<0.7",
    "pyarrow>=15,<17",
    "sentence-transformers>=3.0,<3.1",
]
dynamic = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.6,<0.7",
    "mypy>=1.12,<1.13",
    "coverage>=7.0,<8",
]

[project.urls]
Homepage = "https://example.com/scratch-notebook"

[project.scripts]
"scratch-notebook" = "scratch_notebook.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
